adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
     <h1>Olá, Mundo</h1>
     <hr>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas optio aut doloribus porro ullam natus blanditiis perspiciatis, et accusamus ad distinctio deserunt asperiores velit nostrum repudiandae, eveniet, ipsum repellat ea.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium totam iure possimus corporis architecto vero earum dolorem. Quidem odio possimus harum eius, blanditiis omnis ipsum nam voluptates expedita totam voluptatibus!</p>
     
 </body>
 </html>
